--- a/dtu.html
+++ b/dtu.html
@@ -64,8 +64,8 @@ body {
     margin-bottom: 20px;
 }
 .banner h1 { font-size: 22px; letter-spacing: 2px; margin: 0; color: #61a0ff; text-transform: uppercase; }
-.logo { display: block; width: 110px; margin: 10px auto 18px auto; opacity: 0.95; filter: drop-shadow(0 0 6px rgba(0, 102, 255, 0.35)); }
-h2 { text-align: center; font-size: 19px; margin-bottom: 20px; color: #bcd6ff; text-shadow: 0 0 4px rgba(0,102,255,0.3); }
+.logo { display: block; width: 160px; margin: 10px auto 18px auto; opacity: 0.95; filter: drop-shadow(0 0 6px rgba(0, 102, 255, 0.35)); }
+h2 { text-align: center; font-size: 20px; margin-bottom: 20px; color: #bcd6ff; text-shadow: 0 0 4px rgba(0,102,255,0.3); }
 p { text-align: center; opacity: 0.85; line-height: 1.5; }
 input, select, textarea {
     width: 100%;
@@ -215,11 +215,13 @@ button:hover {
             <button class="accordion">Jak wysłać zapytanie do DTU?</button>
             <div class="panel"><p>Wypełnij formularz zapytaniowy, podaj swoje dane i treść pytania, a następnie kliknij "Wyślij Zapytanie".</p></div>
             <button class="accordion">Czy muszę podawać numer telefonu?</button>
-            <div class="panel"><p>Numer telefonu nie jest obowiązkowy, ale ułatwia kontakt w razie potrzeby dodatkowych informacji.</p></div>
+            <div class="panel"><p>Numer telefonu jest obowiązkowy, ułatwia kontakt w razie potrzeby dodatkowych informacji.</p></div>
             <button class="accordion">Co oznaczają priorytety raportów?</button>
-            <div class="panel"><p>Niski – informacyjny, Średni – ważny, Wysoki – pilny, Krytyczny – wymaga natychmiastowej reakcji DTU.</p></div>
+            <div class="panel"><p>Niski - informacyjny, Średni - ważny, Wysoki - pilny, Krytyczny - wymaga natychmiastowej reakcji DTU.</p></div>
             <button class="accordion">Czy moje dane są bezpieczne?</button>
             <div class="panel"><p>Tak, informacje przesyłane są bezpośrednio do jednostki DTU poprzez zabezpieczony webhook Discord.</p></div>
+            <button class="accordion">Jak umówić się z wami na spotkanie?</button>
+            <div class="panel"><p>Wysyłając formularz zapytaniowy wraz z numerem telefonu. W opisie rozwinąć wstępnie cel spotkania oraz przekazać coś co nas przekona do niego.</p></div>            
             <button onclick="showSection('home')">⏪ Powrót do strony głównej</button>
         </div>
     </div>
